--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles/css/main.css" >
+    <link rel="stylesheet" href="assets/styles/css/landing.css" >
     <title>uHost</title>
 </head>
 
 <body>
     <nav>
         <div class="div-brand">
-            <h1>uHost</h1>
+            <h2><a href="index.html">uHost</a></h1>
         </div>
 
         <div class="div-nav-items">
             <ul>
-                <li>Packages</li>
-                <li>Customers</li>
-                <li class="li-best-option">Start Hosting</li>
+                <li>
+                    <a href="packages.html">Packages</a>
+                </li>
+
+                <li>
+                    <a href="#">Customers</a>
+                </li>
+
+                <li class="li-best-option">
+                    <a href="#">Start Hosting</a>
+                </li>
             </ul>
 
         </div>
@@ -27,7 +35,7 @@
     <main>
 
         <header class="header-main">
-            <h1>Get the freedom you deserve.</h1>
+            <h2>Get the freedom you deserve.</h1>
         </header>
 
 
@@ -105,7 +113,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer-main">
         <p>Support</p>
         <p>Terms of Use</p>        
     </footer>
