--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
+
     <nav>
-        <div class="div-brand">
-            <h2><a href="index.html">uHost</a></h1>
-        </div>
+        <a class="a-brand" href="index.html" title="home">
+            <div></div>
+        </a>
 
         <div class="div-nav-items">
             <ul>
@@ -35,7 +36,8 @@
     <main>
 
         <header class="header-main">
-            <h2>Get the freedom you deserve.</h1>
+            <h1>uHost</h1>
+            <h2>Get the freedom you deserve.</h2>
         </header>
 
 
@@ -95,17 +97,17 @@
             <h2>Many Good Reasons to Stick Around</h2>
             <ul>
                 <li>
-                    <div></div>
+                    <div class="div-happy"></div>
                     <p>3,857,000 Trusting Customers</p>
                 </li>
 
                 <li>
-                    <div></div>
+                    <div class="div-uptime"></div>
                     <p>99.999% Uptime Guarantee</p>
                 </li>
 
                 <li>
-                    <div></div>
+                    <div class="div-fast"></div>
                     <p>Lightning Fast CDN</p>
                 </li>
             </ul>
@@ -115,7 +117,7 @@
 
     <footer class="footer-main">
         <p>Support</p>
-        <p>Terms of Use</p>        
+        <p>Terms of Use</p>      
     </footer>
 
 
