fixed article and headings

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="section-plan">
 
-            <h1>Choose Your Plan</h1>
+            <h2>Choose Your Plan</h2>
         
             <ul class="ul-plans">
 
@@ -63,7 +63,6 @@
 
                 <li class="li-plus"> 
                     <article>
-                        <aside><p>Recommended</p></aside>
                         <h2>Plus</h2>
                         <p class="p-price">$29/month</p>
                         <p><strong>For ambitious projects</strong></p>
@@ -73,6 +72,7 @@
                             <li>100GB Storage</li>
                             <li>Plus Support</li>
                         </ul>
+                        <footer><p>Recommended</p></footer>
                     </article>
                 </li>
 
