adjusted fonts to hardcodes

--- a/packages.html
+++ b/packages.html
@@ -39,7 +39,7 @@
             <article class="article-plus">
                 <h2>Our PLUS Plan</h2>
 
-                <h3>The most popular choise of our customers</h3>
+                <h3>The most popular choice of our customers</h3>
                 <p>
                     Benefit from the increased storage and faster support
                     to ensure that your mission-critical date and applications
