--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/landing.css" >
+    <script src="assets/scripts/script.js" defer></script>
     <title>uHost</title>
 </head>
 
@@ -14,22 +15,26 @@
             <div></div>
         </a>
 
-        <div class="div-nav-items">
-            <ul>
-                <li>
-                    <a href="packages.html">Packages</a>
-                </li>
+        <ul class="ul-nav-items">
+            <li>
+                <a href="packages.html">Packages</a>
+            </li>
 
-                <li>
-                    <a href="#">Customers</a>
-                </li>
+            <li>
+                <a href="customers.html">Customers</a>
+            </li>
 
-                <li class="li-best-option">
-                    <a href="#">Start Hosting</a>
-                </li>
-            </ul>
+            <li class="li-start">
+                <a href="#">Start Hosting</a>
+            </li>
+        </ul>
 
+        <div class="div-nav-button">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
+
     </nav>
 
 
