--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/landing.css" >
-    <script src="assets/scripts/script.js" defer></script>
+    <link rel="icon" href="assets/icons/uHostPNG.png" type="image/x-icon">
     <title>uHost</title>
 </head>
 
