--- a/packages.html
+++ b/packages.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/packages.css" >
+    <link rel="icon" href="assets/icons/uHostPNG.png" type="image/x-icon">
+
     <title>uHost | packages</title>
 </head>
 
