--- a/customers.html
+++ b/customers.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/customers.css">
+    <link rel="icon" href="assets/icons/uHostPNG.png" type="image/x-icon">
+
     <title>uHost | Customers</title>
 </head>
 <body>
